--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h4{
   height: 65%;
   border-radius: 10px;
   border-left: 5px solid salmon ;
+  background-color: rgb(255, 255, 255);
 }
 .experience{
   background-image: url(img/exp-bg.png);
